--- a/AvaliacoesCalper.Domain/AvaliacoesCalper.Domain.csproj
+++ b/AvaliacoesCalper.Domain/AvaliacoesCalper.Domain.csproj
@@ -40,7 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Alternativa.cs" />
     <Compile Include="Entities\EntityBase.cs" />
+    <Compile Include="Entities\Questao.cs" />
+    <Compile Include="Entities\Questionario.cs" />
+    <Compile Include="Entities\Resposta.cs" />
     <Compile Include="Entities\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValueObject\Email.cs" />
